Lab2/Code/syntax.output
State 31 conflicts: 1 shift/reduce
State 36 conflicts: 1 shift/reduce
State 157 conflicts: 10 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier error SEMI
    6       | Specifier SEMI
    7       | error SEMI
    8       | Specifier FunDec CompSt

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT OptTag LC error RC
   15                | STRUCT error LC DefList RC
   16                | STRUCT Tag

   17 OptTag: ID
   18       | %empty

   19 Tag: ID

   20 VarDec: ID
   21       | VarDec LB INT RB
   22       | error LB INT RB
   23       | VarDec LB error RB

   24 FunDec: ID LP VarList RP
   25       | error LP VarList RP
   26       | ID LP RP
   27       | ID LP error RP
   28       | error LP RP

   29 VarList: ParamDec COMMA VarList
   30        | ParamDec

   31 ParamDec: Specifier VarDec

   32 CompSt: LC DefList StmtList RC
   33       | LC DefList error RC
   34       | LC error StmtList RC

   35 StmtList: Stmt StmtList
   36         | %empty

   37 Stmt: Exp SEMI
   38     | Exp error SEMI
   39     | CompSt
   40     | RETURN Exp SEMI
   41     | RETURN error SEMI
   42     | IF LP Exp RP Stmt
   43     | IF LP error RP Stmt
   44     | IF LP Exp RP Stmt ELSE Stmt
   45     | IF LP error RP Stmt ELSE Stmt
   46     | WHILE LP Exp RP Stmt
   47     | WHILE LP error RP Stmt

   48 DefList: Def DefList
   49        | %empty

   50 Def: Specifier DecList SEMI
   51    | Specifier error SEMI
   52    | error SEMI

   53 DecList: Dec
   54        | Dec COMMA DecList

   55 Dec: VarDec
   56    | VarDec ASSIGNOP Exp
   57    | error ASSIGNOP Exp

   58 Exp: Exp ASSIGNOP Exp
   59    | error ASSIGNOP Exp
   60    | Exp AND Exp
   61    | Exp OR Exp
   62    | Exp RELOP Exp
   63    | Exp PLUS Exp
   64    | Exp MINUS Exp
   65    | Exp STAR Exp
   66    | Exp STAR error Exp
   67    | Exp DIV Exp
   68    | LP Exp RP
   69    | LP error RP
   70    | MINUS Exp
   71    | NOT Exp
   72    | ID LP Args RP
   73    | ID LP RP
   74    | Exp LB Exp RB
   75    | Exp LB error RB
   76    | error LB Exp RB
   77    | Exp DOT ID
   78    | ID
   79    | INT
   80    | FLOAT

   81 Args: Exp COMMA Args
   82     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 5 7 14 15 22 23 25 27 28 33 34 38 41 43 45 47 51 52 57 59 66 69 75 76
    INT (258) 21 22 79
    FLOAT (259) 80
    ID (260) 17 19 20 24 26 27 72 73 77 78
    TYPE (261) 11
    SEMI (262) 4 5 6 7 37 38 40 41 50 51 52
    COMMA (263) 10 29 54 81
    RELOP (264) 62
    ASSIGNOP (265) 56 57 58 59
    PLUS (266) 63
    MINUS (267) 64 70
    STAR (268) 65 66
    DIV (269) 67
    AND (270) 60
    OR (271) 61
    DOT (272) 77
    NOT (273) 71
    LP (274) 24 25 26 27 28 42 43 44 45 46 47 68 69 72 73
    RP (275) 24 25 26 27 28 42 43 44 45 46 47 68 69 72 73
    LB (276) 21 22 23 74 75 76
    RB (277) 21 22 23 74 75 76
    LC (278) 13 14 15 32 33 34
    RC (279) 13 14 15 32 33 34
    STRUCT (280) 13 14 15 16
    RETURN (281) 40 41
    IF (282) 42 43 44 45
    ELSE (283) 44 45
    WHILE (284) 46 47
    LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    Program (32)
        on left: 1
        on right: 0
    ExtDefList (33)
        on left: 2 3
        on right: 1 2
    ExtDef (34)
        on left: 4 5 6 7 8
        on right: 2
    ExtDecList (35)
        on left: 9 10
        on right: 4 10
    Specifier (36)
        on left: 11 12
        on right: 4 5 6 8 31 50 51
    StructSpecifier (37)
        on left: 13 14 15 16
        on right: 12
    OptTag (38)
        on left: 17 18
        on right: 13 14
    Tag (39)
        on left: 19
        on right: 16
    VarDec (40)
        on left: 20 21 22 23
        on right: 9 10 21 23 31 55 56
    FunDec (41)
        on left: 24 25 26 27 28
        on right: 8
    VarList (42)
        on left: 29 30
        on right: 24 25 29
    ParamDec (43)
        on left: 31
        on right: 29 30
    CompSt (44)
        on left: 32 33 34
        on right: 8 39
    StmtList (45)
        on left: 35 36
        on right: 32 34 35
    Stmt (46)
        on left: 37 38 39 40 41 42 43 44 45 46 47
        on right: 35 42 43 44 45 46 47
    DefList (47)
        on left: 48 49
        on right: 13 15 32 33 48
    Def (48)
        on left: 50 51 52
        on right: 48
    DecList (49)
        on left: 53 54
        on right: 50 54
    Dec (50)
        on left: 55 56 57
        on right: 53 54
    Exp (51)
        on left: 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80
        on right: 37 38 40 42 44 46 56 57 58 59 60 61 62 63 64 65 66 67 68 70 71 74 75 76 77 81 82
    Args (52)
        on left: 81 82
        on right: 72 81


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 3

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . OptTag LC error RC
   15                | STRUCT . error LC DefList RC
   16                | STRUCT . Tag

    error  shift, and go to state 10
    ID     shift, and go to state 11

    LC  reduce using rule 18 (OptTag)

    OptTag  go to state 12
    Tag     go to state 13


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 14


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 15
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . error SEMI
    6       | Specifier . SEMI
    8       | Specifier . FunDec CompSt

    error  shift, and go to state 16
    ID     shift, and go to state 17
    SEMI   shift, and go to state 18

    ExtDecList  go to state 19
    VarDec      go to state 20
    FunDec      go to state 21


State 8

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 10

   15 StructSpecifier: STRUCT error . LC DefList RC

    LC  shift, and go to state 22


State 11

   17 OptTag: ID .
   19 Tag: ID .

    LC        reduce using rule 17 (OptTag)
    $default  reduce using rule 19 (Tag)


State 12

   13 StructSpecifier: STRUCT OptTag . LC DefList RC
   14                | STRUCT OptTag . LC error RC

    LC  shift, and go to state 23


State 13

   16 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 16 (StructSpecifier)


State 14

    0 $accept: Program $end .

    $default  accept


State 15

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 16

    5 ExtDef: Specifier error . SEMI
   22 VarDec: error . LB INT RB
   25 FunDec: error . LP VarList RP
   28       | error . LP RP

    SEMI  shift, and go to state 24
    LP    shift, and go to state 25
    LB    shift, and go to state 26


State 17

   20 VarDec: ID .
   24 FunDec: ID . LP VarList RP
   26       | ID . LP RP
   27       | ID . LP error RP

    LP  shift, and go to state 27

    $default  reduce using rule 20 (VarDec)


State 18

    6 ExtDef: Specifier SEMI .

    $default  reduce using rule 6 (ExtDef)


State 19

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 28


State 20

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   21 VarDec: VarDec . LB INT RB
   23       | VarDec . LB error RB

    COMMA  shift, and go to state 29
    LB     shift, and go to state 30

    $default  reduce using rule 9 (ExtDecList)


State 21

    8 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 31

    CompSt  go to state 32


State 22

   15 StructSpecifier: STRUCT error LC . DefList RC

    error   shift, and go to state 33
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 49 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 8
    DefList          go to state 35
    Def              go to state 36


State 23

   13 StructSpecifier: STRUCT OptTag LC . DefList RC
   14                | STRUCT OptTag LC . error RC

    error   shift, and go to state 37
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 49 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 8
    DefList          go to state 38
    Def              go to state 36


State 24

    5 ExtDef: Specifier error SEMI .

    $default  reduce using rule 5 (ExtDef)


State 25

   25 FunDec: error LP . VarList RP
   28       | error LP . RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 39
    STRUCT  shift, and go to state 3

    Specifier        go to state 40
    StructSpecifier  go to state 8
    VarList          go to state 41
    ParamDec         go to state 42


State 26

   22 VarDec: error LB . INT RB

    INT  shift, and go to state 43


State 27

   24 FunDec: ID LP . VarList RP
   26       | ID LP . RP
   27       | ID LP . error RP

    error   shift, and go to state 44
    TYPE    shift, and go to state 2
    RP      shift, and go to state 45
    STRUCT  shift, and go to state 3

    Specifier        go to state 40
    StructSpecifier  go to state 8
    VarList          go to state 46
    ParamDec         go to state 42


State 28

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 29

   10 ExtDecList: VarDec COMMA . ExtDecList

    error  shift, and go to state 47
    ID     shift, and go to state 48

    ExtDecList  go to state 49
    VarDec      go to state 20


State 30

   21 VarDec: VarDec LB . INT RB
   23       | VarDec LB . error RB

    error  shift, and go to state 50
    INT    shift, and go to state 51


State 31

   32 CompSt: LC . DefList StmtList RC
   33       | LC . DefList error RC
   34       | LC . error StmtList RC

    error   shift, and go to state 52
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 49 (DefList)]
    INT     reduce using rule 49 (DefList)
    FLOAT   reduce using rule 49 (DefList)
    ID      reduce using rule 49 (DefList)
    MINUS   reduce using rule 49 (DefList)
    NOT     reduce using rule 49 (DefList)
    LP      reduce using rule 49 (DefList)
    LC      reduce using rule 49 (DefList)
    RC      reduce using rule 49 (DefList)
    RETURN  reduce using rule 49 (DefList)
    IF      reduce using rule 49 (DefList)
    WHILE   reduce using rule 49 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 8
    DefList          go to state 53
    Def              go to state 36


State 32

    8 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 8 (ExtDef)


State 33

   52 Def: error . SEMI

    SEMI  shift, and go to state 54


State 34

   50 Def: Specifier . DecList SEMI
   51    | Specifier . error SEMI

    error  shift, and go to state 55
    ID     shift, and go to state 48

    VarDec   go to state 56
    DecList  go to state 57
    Dec      go to state 58


State 35

   15 StructSpecifier: STRUCT error LC DefList . RC

    RC  shift, and go to state 59


State 36

   48 DefList: Def . DefList

    error   shift, and go to state 33
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 49 (DefList)]
    INT     reduce using rule 49 (DefList)
    FLOAT   reduce using rule 49 (DefList)
    ID      reduce using rule 49 (DefList)
    MINUS   reduce using rule 49 (DefList)
    NOT     reduce using rule 49 (DefList)
    LP      reduce using rule 49 (DefList)
    LC      reduce using rule 49 (DefList)
    RC      reduce using rule 49 (DefList)
    RETURN  reduce using rule 49 (DefList)
    IF      reduce using rule 49 (DefList)
    WHILE   reduce using rule 49 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 8
    DefList          go to state 60
    Def              go to state 36


State 37

   14 StructSpecifier: STRUCT OptTag LC error . RC
   52 Def: error . SEMI

    SEMI  shift, and go to state 54
    RC    shift, and go to state 61


State 38

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 62


State 39

   28 FunDec: error LP RP .

    $default  reduce using rule 28 (FunDec)


State 40

   31 ParamDec: Specifier . VarDec

    error  shift, and go to state 47
    ID     shift, and go to state 48

    VarDec  go to state 63


State 41

   25 FunDec: error LP VarList . RP

    RP  shift, and go to state 64


State 42

   29 VarList: ParamDec . COMMA VarList
   30        | ParamDec .

    COMMA  shift, and go to state 65

    $default  reduce using rule 30 (VarList)


State 43

   22 VarDec: error LB INT . RB

    RB  shift, and go to state 66


State 44

   27 FunDec: ID LP error . RP

    RP  shift, and go to state 67


State 45

   26 FunDec: ID LP RP .

    $default  reduce using rule 26 (FunDec)


State 46

   24 FunDec: ID LP VarList . RP

    RP  shift, and go to state 68


State 47

   22 VarDec: error . LB INT RB

    LB  shift, and go to state 26


State 48

   20 VarDec: ID .

    $default  reduce using rule 20 (VarDec)


State 49

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 50

   23 VarDec: VarDec LB error . RB

    RB  shift, and go to state 69


State 51

   21 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 70


State 52

   34 CompSt: LC error . StmtList RC
   52 Def: error . SEMI

    error   shift, and go to state 71
    INT     shift, and go to state 72
    FLOAT   shift, and go to state 73
    ID      shift, and go to state 74
    SEMI    shift, and go to state 54
    MINUS   shift, and go to state 75
    NOT     shift, and go to state 76
    LP      shift, and go to state 77
    LC      shift, and go to state 31
    RETURN  shift, and go to state 78
    IF      shift, and go to state 79
    WHILE   shift, and go to state 80

    RC  reduce using rule 36 (StmtList)

    CompSt    go to state 81
    StmtList  go to state 82
    Stmt      go to state 83
    Exp       go to state 84


State 53

   32 CompSt: LC DefList . StmtList RC
   33       | LC DefList . error RC

    error   shift, and go to state 85
    INT     shift, and go to state 72
    FLOAT   shift, and go to state 73
    ID      shift, and go to state 74
    MINUS   shift, and go to state 75
    NOT     shift, and go to state 76
    LP      shift, and go to state 77
    LC      shift, and go to state 31
    RETURN  shift, and go to state 78
    IF      shift, and go to state 79
    WHILE   shift, and go to state 80

    RC  reduce using rule 36 (StmtList)

    CompSt    go to state 81
    StmtList  go to state 86
    Stmt      go to state 83
    Exp       go to state 84


State 54

   52 Def: error SEMI .

    $default  reduce using rule 52 (Def)


State 55

   22 VarDec: error . LB INT RB
   51 Def: Specifier error . SEMI
   57 Dec: error . ASSIGNOP Exp

    SEMI      shift, and go to state 87
    ASSIGNOP  shift, and go to state 88
    LB        shift, and go to state 26


State 56

   21 VarDec: VarDec . LB INT RB
   23       | VarDec . LB error RB
   55 Dec: VarDec .
   56    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 89
    LB        shift, and go to state 30

    $default  reduce using rule 55 (Dec)


State 57

   50 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 90


State 58

   53 DecList: Dec .
   54        | Dec . COMMA DecList

    COMMA  shift, and go to state 91

    $default  reduce using rule 53 (DecList)


State 59

   15 StructSpecifier: STRUCT error LC DefList RC .

    $default  reduce using rule 15 (StructSpecifier)


State 60

   48 DefList: Def DefList .

    $default  reduce using rule 48 (DefList)


State 61

   14 StructSpecifier: STRUCT OptTag LC error RC .

    $default  reduce using rule 14 (StructSpecifier)


State 62

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 63

   21 VarDec: VarDec . LB INT RB
   23       | VarDec . LB error RB
   31 ParamDec: Specifier VarDec .

    LB  shift, and go to state 30

    $default  reduce using rule 31 (ParamDec)


State 64

   25 FunDec: error LP VarList RP .

    $default  reduce using rule 25 (FunDec)


State 65

   29 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 40
    StructSpecifier  go to state 8
    VarList          go to state 92
    ParamDec         go to state 42


State 66

   22 VarDec: error LB INT RB .

    $default  reduce using rule 22 (VarDec)


State 67

   27 FunDec: ID LP error RP .

    $default  reduce using rule 27 (FunDec)


State 68

   24 FunDec: ID LP VarList RP .

    $default  reduce using rule 24 (FunDec)


State 69

   23 VarDec: VarDec LB error RB .

    $default  reduce using rule 23 (VarDec)


State 70

   21 VarDec: VarDec LB INT RB .

    $default  reduce using rule 21 (VarDec)


State 71

   59 Exp: error . ASSIGNOP Exp
   76    | error . LB Exp RB

    ASSIGNOP  shift, and go to state 93
    LB        shift, and go to state 94


State 72

   79 Exp: INT .

    $default  reduce using rule 79 (Exp)


State 73

   80 Exp: FLOAT .

    $default  reduce using rule 80 (Exp)


State 74

   72 Exp: ID . LP Args RP
   73    | ID . LP RP
   78    | ID .

    LP  shift, and go to state 95

    $default  reduce using rule 78 (Exp)


State 75

   70 Exp: MINUS . Exp

    error  shift, and go to state 71
    INT    shift, and go to state 72
    FLOAT  shift, and go to state 73
    ID     shift, and go to state 74
    MINUS  shift, and go to state 75
    NOT    shift, and go to state 76
    LP     shift, and go to state 77

    Exp  go to state 96


State 76

   71 Exp: NOT . Exp

    error  shift, and go to state 71
    INT    shift, and go to state 72
    FLOAT  shift, and go to state 73
    ID     shift, and go to state 74
    MINUS  shift, and go to state 75
    NOT    shift, and go to state 76
    LP     shift, and go to state 77

    Exp  go to state 97


State 77

   68 Exp: LP . Exp RP
   69    | LP . error RP

    error  shift, and go to state 98
    INT    shift, and go to state 72
    FLOAT  shift, and go to state 73
    ID     shift, and go to state 74
    MINUS  shift, and go to state 75
    NOT    shift, and go to state 76
    LP     shift, and go to state 77

    Exp  go to state 99


State 78

   40 Stmt: RETURN . Exp SEMI
   41     | RETURN . error SEMI

    error  shift, and go to state 100
    INT    shift, and go to state 72
    FLOAT  shift, and go to state 73
    ID     shift, and go to state 74
    MINUS  shift, and go to state 75
    NOT    shift, and go to state 76
    LP     shift, and go to state 77

    Exp  go to state 101


State 79

   42 Stmt: IF . LP Exp RP Stmt
   43     | IF . LP error RP Stmt
   44     | IF . LP Exp RP Stmt ELSE Stmt
   45     | IF . LP error RP Stmt ELSE Stmt

    LP  shift, and go to state 102


State 80

   46 Stmt: WHILE . LP Exp RP Stmt
   47     | WHILE . LP error RP Stmt

    LP  shift, and go to state 103


State 81

   39 Stmt: CompSt .

    $default  reduce using rule 39 (Stmt)


State 82

   34 CompSt: LC error StmtList . RC

    RC  shift, and go to state 104


State 83

   35 StmtList: Stmt . StmtList

    error   shift, and go to state 71
    INT     shift, and go to state 72
    FLOAT   shift, and go to state 73
    ID      shift, and go to state 74
    MINUS   shift, and go to state 75
    NOT     shift, and go to state 76
    LP      shift, and go to state 77
    LC      shift, and go to state 31
    RETURN  shift, and go to state 78
    IF      shift, and go to state 79
    WHILE   shift, and go to state 80

    RC  reduce using rule 36 (StmtList)

    CompSt    go to state 81
    StmtList  go to state 105
    Stmt      go to state 83
    Exp       go to state 84


State 84

   37 Stmt: Exp . SEMI
   38     | Exp . error SEMI
   58 Exp: Exp . ASSIGNOP Exp
   60    | Exp . AND Exp
   61    | Exp . OR Exp
   62    | Exp . RELOP Exp
   63    | Exp . PLUS Exp
   64    | Exp . MINUS Exp
   65    | Exp . STAR Exp
   66    | Exp . STAR error Exp
   67    | Exp . DIV Exp
   74    | Exp . LB Exp RB
   75    | Exp . LB error RB
   77    | Exp . DOT ID

    error     shift, and go to state 106
    SEMI      shift, and go to state 107
    RELOP     shift, and go to state 108
    ASSIGNOP  shift, and go to state 109
    PLUS      shift, and go to state 110
    MINUS     shift, and go to state 111
    STAR      shift, and go to state 112
    DIV       shift, and go to state 113
    AND       shift, and go to state 114
    OR        shift, and go to state 115
    DOT       shift, and go to state 116
    LB        shift, and go to state 117


State 85

   33 CompSt: LC DefList error . RC
   59 Exp: error . ASSIGNOP Exp
   76    | error . LB Exp RB

    ASSIGNOP  shift, and go to state 93
    LB        shift, and go to state 94
    RC        shift, and go to state 118


State 86

   32 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 119


State 87

   51 Def: Specifier error SEMI .

    $default  reduce using rule 51 (Def)


State 88

   57 Dec: error ASSIGNOP . Exp

    error  shift, and go to state 71
    INT    shift, and go to state 72
    FLOAT  shift, and go to state 73
    ID     shift, and go to state 74
    MINUS  shift, and go to state 75
    NOT    shift, and go to state 76
    LP     shift, and go to state 77

    Exp  go to state 120


State 89

   56 Dec: VarDec ASSIGNOP . Exp

    error  shift, and go to state 71
    INT    shift, and go to state 72
    FLOAT  shift, and go to state 73
    ID     shift, and go to state 74
    MINUS  shift, and go to state 75
    NOT    shift, and go to state 76
    LP     shift, and go to state 77

    Exp  go to state 121


State 90

   50 Def: Specifier DecList SEMI .

    $default  reduce using rule 50 (Def)


State 91

   54 DecList: Dec COMMA . DecList

    error  shift, and go to state 122
    ID     shift, and go to state 48

    VarDec   go to state 56
    DecList  go to state 123
    Dec      go to state 58


State 92

   29 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 29 (VarList)


State 93

   59 Exp: error ASSIGNOP . Exp

    error  shift, and go to state 71
    INT    shift, and go to state 72
    FLOAT  shift, and go to state 73
    ID     shift, and go to state 74
    MINUS  shift, and go to state 75
    NOT    shift, and go to state 76
    LP     shift, and go to state 77

    Exp  go to state 124


State 94

   76 Exp: error LB . Exp RB

    error  shift, and go to state 71
    INT    shift, and go to state 72
    FLOAT  shift, and go to state 73
    ID     shift, and go to state 74
    MINUS  shift, and go to state 75
    NOT    shift, and go to state 76
    LP     shift, and go to state 77

    Exp  go to state 125


State 95

   72 Exp: ID LP . Args RP
   73    | ID LP . RP

    error  shift, and go to state 71
    INT    shift, and go to state 72
    FLOAT  shift, and go to state 73
    ID     shift, and go to state 74
    MINUS  shift, and go to state 75
    NOT    shift, and go to state 76
    LP     shift, and go to state 77
    RP     shift, and go to state 126

    Exp   go to state 127
    Args  go to state 128


State 96

   58 Exp: Exp . ASSIGNOP Exp
   60    | Exp . AND Exp
   61    | Exp . OR Exp
   62    | Exp . RELOP Exp
   63    | Exp . PLUS Exp
   64    | Exp . MINUS Exp
   65    | Exp . STAR Exp
   66    | Exp . STAR error Exp
   67    | Exp . DIV Exp
   70    | MINUS Exp .
   74    | Exp . LB Exp RB
   75    | Exp . LB error RB
   77    | Exp . DOT ID

    STAR  shift, and go to state 112
    DIV   shift, and go to state 113
    DOT   shift, and go to state 116
    LB    shift, and go to state 117

    $default  reduce using rule 70 (Exp)


State 97

   58 Exp: Exp . ASSIGNOP Exp
   60    | Exp . AND Exp
   61    | Exp . OR Exp
   62    | Exp . RELOP Exp
   63    | Exp . PLUS Exp
   64    | Exp . MINUS Exp
   65    | Exp . STAR Exp
   66    | Exp . STAR error Exp
   67    | Exp . DIV Exp
   71    | NOT Exp .
   74    | Exp . LB Exp RB
   75    | Exp . LB error RB
   77    | Exp . DOT ID

    DOT  shift, and go to state 116
    LB   shift, and go to state 117

    $default  reduce using rule 71 (Exp)


State 98

   59 Exp: error . ASSIGNOP Exp
   69    | LP error . RP
   76    | error . LB Exp RB

    ASSIGNOP  shift, and go to state 93
    RP        shift, and go to state 129
    LB        shift, and go to state 94


State 99

   58 Exp: Exp . ASSIGNOP Exp
   60    | Exp . AND Exp
   61    | Exp . OR Exp
   62    | Exp . RELOP Exp
   63    | Exp . PLUS Exp
   64    | Exp . MINUS Exp
   65    | Exp . STAR Exp
   66    | Exp . STAR error Exp
   67    | Exp . DIV Exp
   68    | LP Exp . RP
   74    | Exp . LB Exp RB
   75    | Exp . LB error RB
   77    | Exp . DOT ID

    RELOP     shift, and go to state 108
    ASSIGNOP  shift, and go to state 109
    PLUS      shift, and go to state 110
    MINUS     shift, and go to state 111
    STAR      shift, and go to state 112
    DIV       shift, and go to state 113
    AND       shift, and go to state 114
    OR        shift, and go to state 115
    DOT       shift, and go to state 116
    RP        shift, and go to state 130
    LB        shift, and go to state 117


State 100

   41 Stmt: RETURN error . SEMI
   59 Exp: error . ASSIGNOP Exp
   76    | error . LB Exp RB

    SEMI      shift, and go to state 131
    ASSIGNOP  shift, and go to state 93
    LB        shift, and go to state 94


State 101

   40 Stmt: RETURN Exp . SEMI
   58 Exp: Exp . ASSIGNOP Exp
   60    | Exp . AND Exp
   61    | Exp . OR Exp
   62    | Exp . RELOP Exp
   63    | Exp . PLUS Exp
   64    | Exp . MINUS Exp
   65    | Exp . STAR Exp
   66    | Exp . STAR error Exp
   67    | Exp . DIV Exp
   74    | Exp . LB Exp RB
   75    | Exp . LB error RB
   77    | Exp . DOT ID

    SEMI      shift, and go to state 132
    RELOP     shift, and go to state 108
    ASSIGNOP  shift, and go to state 109
    PLUS      shift, and go to state 110
    MINUS     shift, and go to state 111
    STAR      shift, and go to state 112
    DIV       shift, and go to state 113
    AND       shift, and go to state 114
    OR        shift, and go to state 115
    DOT       shift, and go to state 116
    LB        shift, and go to state 117


State 102

   42 Stmt: IF LP . Exp RP Stmt
   43     | IF LP . error RP Stmt
   44     | IF LP . Exp RP Stmt ELSE Stmt
   45     | IF LP . error RP Stmt ELSE Stmt

    error  shift, and go to state 133
    INT    shift, and go to state 72
    FLOAT  shift, and go to state 73
    ID     shift, and go to state 74
    MINUS  shift, and go to state 75
    NOT    shift, and go to state 76
    LP     shift, and go to state 77

    Exp  go to state 134


State 103

   46 Stmt: WHILE LP . Exp RP Stmt
   47     | WHILE LP . error RP Stmt

    error  shift, and go to state 135
    INT    shift, and go to state 72
    FLOAT  shift, and go to state 73
    ID     shift, and go to state 74
    MINUS  shift, and go to state 75
    NOT    shift, and go to state 76
    LP     shift, and go to state 77

    Exp  go to state 136


State 104

   34 CompSt: LC error StmtList RC .

    $default  reduce using rule 34 (CompSt)


State 105

   35 StmtList: Stmt StmtList .

    $default  reduce using rule 35 (StmtList)


State 106

   38 Stmt: Exp error . SEMI

    SEMI  shift, and go to state 137


State 107

   37 Stmt: Exp SEMI .

    $default  reduce using rule 37 (Stmt)


State 108

   62 Exp: Exp RELOP . Exp

    error  shift, and go to state 71
    INT    shift, and go to state 72
    FLOAT  shift, and go to state 73
    ID     shift, and go to state 74
    MINUS  shift, and go to state 75
    NOT    shift, and go to state 76
    LP     shift, and go to state 77

    Exp  go to state 138


State 109

   58 Exp: Exp ASSIGNOP . Exp

    error  shift, and go to state 71
    INT    shift, and go to state 72
    FLOAT  shift, and go to state 73
    ID     shift, and go to state 74
    MINUS  shift, and go to state 75
    NOT    shift, and go to state 76
    LP     shift, and go to state 77

    Exp  go to state 139


State 110

   63 Exp: Exp PLUS . Exp

    error  shift, and go to state 71
    INT    shift, and go to state 72
    FLOAT  shift, and go to state 73
    ID     shift, and go to state 74
    MINUS  shift, and go to state 75
    NOT    shift, and go to state 76
    LP     shift, and go to state 77

    Exp  go to state 140


State 111

   64 Exp: Exp MINUS . Exp

    error  shift, and go to state 71
    INT    shift, and go to state 72
    FLOAT  shift, and go to state 73
    ID     shift, and go to state 74
    MINUS  shift, and go to state 75
    NOT    shift, and go to state 76
    LP     shift, and go to state 77

    Exp  go to state 141


State 112

   65 Exp: Exp STAR . Exp
   66    | Exp STAR . error Exp

    error  shift, and go to state 142
    INT    shift, and go to state 72
    FLOAT  shift, and go to state 73
    ID     shift, and go to state 74
    MINUS  shift, and go to state 75
    NOT    shift, and go to state 76
    LP     shift, and go to state 77

    Exp  go to state 143


State 113

   67 Exp: Exp DIV . Exp

    error  shift, and go to state 71
    INT    shift, and go to state 72
    FLOAT  shift, and go to state 73
    ID     shift, and go to state 74
    MINUS  shift, and go to state 75
    NOT    shift, and go to state 76
    LP     shift, and go to state 77

    Exp  go to state 144


State 114

   60 Exp: Exp AND . Exp

    error  shift, and go to state 71
    INT    shift, and go to state 72
    FLOAT  shift, and go to state 73
    ID     shift, and go to state 74
    MINUS  shift, and go to state 75
    NOT    shift, and go to state 76
    LP     shift, and go to state 77

    Exp  go to state 145


State 115

   61 Exp: Exp OR . Exp

    error  shift, and go to state 71
    INT    shift, and go to state 72
    FLOAT  shift, and go to state 73
    ID     shift, and go to state 74
    MINUS  shift, and go to state 75
    NOT    shift, and go to state 76
    LP     shift, and go to state 77

    Exp  go to state 146


State 116

   77 Exp: Exp DOT . ID

    ID  shift, and go to state 147


State 117

   74 Exp: Exp LB . Exp RB
   75    | Exp LB . error RB

    error  shift, and go to state 148
    INT    shift, and go to state 72
    FLOAT  shift, and go to state 73
    ID     shift, and go to state 74
    MINUS  shift, and go to state 75
    NOT    shift, and go to state 76
    LP     shift, and go to state 77

    Exp  go to state 149


State 118

   33 CompSt: LC DefList error RC .

    $default  reduce using rule 33 (CompSt)


State 119

   32 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 32 (CompSt)


State 120
